added starter code and directions for assignment

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,28 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1>Instructions for Parents and Children HW</h1>
+    <p>
+      1) Make a react component that can show at least 2 child components 
+    </p>
+    <p>
+      2) Child must have a header text, an action button and changeable content fed to it thru props
+    </p>
+    <p>
+      3) On the button click emit the event to the parent in order to change the childs content
+    </p>
+    <p>
+      4) This must be ran inside of a docker container
+	</p>
+	<p>
+		5) An accurate readme with all relevant details must be submitted
+	</p>
+	<p>
+		6) Will not be accepted unless submited thru github link
+	</p> 
+    <p>
+      7) Remember to delete the instructions before you submit the homework!!
+    </p>
     <div id="root"></div>
     <!--
       This HTML file is a template.
